fix(styles): Updated letter-spacing in text variables

--- a/src/assets/sass/common/_utils.sass
+++ b/src/assets/sass/common/_utils.sass
@@ -140,9 +140,9 @@
     font-size: $size-mobile !important
     font-weight: $weight !important
     @if $name == "1"
-      letter-spacing: -0.9px !important
+      letter-spacing: -0.4px !important
     @else
-      letter-spacing: -0.3px !important
+      letter-spacing: -0.2px !important
     +osg-mq-tablet-and-up
       font-size: $size-tablet !important
     +osg-mq-desktop-and-up
